--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
 
         <ul class="page-links">
-            <a class="a-tag" href="./home.html"><li class="text-secondary">Home</li> </a>
+            <a class="a-tag" href="./index.html"><li class="text-secondary">Home</li> </a>
             <span>|</span>
             <a class="a-tag" href="./menu.html"><li>Menu</li> </a>
             <span>|</span>
