--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
         
 
         <ul class="page-links">
-            <a class="a-tag" href="./home.html"><li>Home</li> </a>
+            <a class="a-tag" href="./index.html"><li>Home</li> </a>
             <span>|</span>
             <a class="a-tag" href="./menu.html"><li class="text-secondary">Menu</li> </a>
             <span>|</span>
