--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
           <div class="carousel-item" data-bs-interval="5000">
             <h1 class="  text-center over-lay  bg-white text-black opacity-75">Serving Indoor & Takeout!</h1>
 
-            <img src="images/chopsticks.jpg" class="d-block w-100 h-20 c-image" alt="...">
+            <img src="images/indoorortakeout.jpg" class="d-block w-100 h-20 c-image" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
+              <h5>Enjoy a night out or stay in and relax</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="5000">
             <h1 class="  text-center over-lay  bg-white text-black opacity-75">We're Hiring! See Contact For Details!</h1>
 
-            <img src="images/logo.png" class="d-block w-100 h-20 c-image" alt="...">
+            <img src="images/hiring.jpg" class="d-block w-100 h-20 c-image" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
