--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="5000" >
                 <h1 class="  text-center over-lay  bg-white text-black opacity-75">Noodle & Teriyaki</h1>
-            <img src="images/dish1.jpg" class="d-block w-100 h-20 c-image" alt="...">
+            <img src="images/dish1.jpg" class="d-block  w-100 h-20 c-image" alt="...">
             <div class="carousel-caption d-md-block">
               <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">"The food was delicious. Best tempura we've ever had! Service was very good. These folks have the flavor down."</h5>
               <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">T.D - Yelp Reviewer</p>
@@ -103,7 +103,7 @@
     </div>
 
 
-<div id="map"></div>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.181200694383!2d-118.17011102436878!3d34.67537597292874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c25b74fb9c5dc9%3A0xbede314425a56f04!2sRamen%20Boy!5e0!3m2!1sen!2sus!4v1685940604393!5m2!1sen!2sus" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
 
 
