--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Ramen Boy</title>
 </head>
 <body>
@@ -43,18 +44,18 @@
             <h1 class="  text-center over-lay  bg-white text-black opacity-75">Serving Indoor & Takeout!</h1>
 
             <img src="images/indoorortakeout.jpg" class="d-block w-100 h-20 c-image" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Enjoy a night out or stay in and relax</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <div class="carousel-caption d-md-block">
+              <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">Whether you're looking to enjoy a night out or stay in and relax...</h5>
+              <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">We've got what you need!</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="5000">
-            <h1 class="  text-center over-lay  bg-white text-black opacity-75">We're Hiring! See Contact For Details!</h1>
+            <h1 class="text-center over-lay  bg-white text-black opacity-75">We're Hiring!</h1>
 
             <img src="images/hiring.jpg" class="d-block w-100 h-20 c-image" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+            <div class="carousel-caption d-md-block">
+              <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">Currently processing applications!</h5>
+              <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">See contact page for positions and how to apply</p>
             </div>
           </div>
         </div>
@@ -84,7 +85,7 @@
          <h4 class="category">Holidays</h4>
 
          <div class="container">
-              <div class="hours">Christmas Eve: <br>(12/14)</div>
+              <div class="hours">Christmas Eve: <br>(12/24)</div>
               <div class="closed-or-open"> Closed</div>
             </div>
          <div class="container">
