--- a/menu.html
+++ b/menu.html
@@ -36,8 +36,8 @@
               <img src="images/menu.jpg" class="d-block w-100 c-image" alt="...">
               
               <div class="carousel-caption">
-                <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">Whether you're looking to enjoy a night out or stay in and relax...</h5>
-              <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">We've got what you need!</p>
+                <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">Take your taste buds on an adventure!</p>
+                <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">Choose from a vast variety of ramen, soup, and bowls!</h5>
               </div>
             </div>
 
