Made some style changes and added json data

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 class="  text-center over-lay  bg-white text-black opacity-75">Noodle & Teriyaki</h1>
             <img src="images/dish1.jpg" class="d-block  w-100  c-image" alt="...">
             <div class="carousel-caption d-md-block">
-              <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">"The food was delicious. Best tempura we've ever had! Service was very good. These folks have the flavor down."</h5>
+              <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">"The food was delicious. Best tempura we've ever had! Service was very good. These folks have the flavor down. ☆☆☆☆☆"</h5>
               <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">T.D - Yelp Reviewer</p>
             </div>
           </div>
