--- a/menu.html
+++ b/menu.html
@@ -106,6 +106,12 @@
         <div id="ramen-section">
 
           <h2 class="text-center h2-ramen">Ramen</h2>
+          <!-- <img src="images/dish1.jpg" class="menu-h2-image"alt="..."> -->
+          <div class="image-container">
+            <img src="images/dish1.jpg" class="menu-h2-image" alt="...">
+            <div class="image-text">Choose from over 16 different ramens!</div>
+          </div>
+
 
 
 <div class="food-items-ramen">
@@ -266,9 +272,136 @@
         <div id="toppings-section">
 
           <h2 class="text-center h2-toppings">Toppings</h2>
+          <img src="images/menu.jpg" class="menu-h2-image"alt="...">
+
           
 
 <div class="food-items-toppings">
+  <div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-success text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div>
+  <div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-success text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-success text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-success text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div><div class="card" style="width: 15rem; height: 16rem;">
+    <img class="card-img-top" src="images/dish1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title text-bg-danger text-center">Red Ginger</h5>
+      <!-- <br> -->
+      <h5 class="text-center mt-3">$0.99</h5>
+    </div>
+  </div>
+
+  </div>
+
+  
 
 </div>
 
