--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 class="  text-center over-lay  bg-white text-black opacity-75">Noodle & Teriyaki</h1>
             <img src="images/dish1.jpg" class="d-block  w-100  c-image" alt="...">
             <div class="carousel-caption d-md-block">
-              <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">"The food was delicious. Best tempura we've ever had! Service was very good. These folks have the flavor down. ☆☆☆☆☆"</h5>
+              <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">"The food was delicious. Best tempura we've ever had! Service was very good. These folks have the flavor down. ★★★★★"</h5>
               <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">T.D - Yelp Reviewer</p>
             </div>
           </div>
@@ -106,6 +106,56 @@
 
     <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.181200694383!2d-118.17011102436878!3d34.67537597292874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c25b74fb9c5dc9%3A0xbede314425a56f04!2sRamen%20Boy!5e0!3m2!1sen!2sus!4v1685940604393!5m2!1sen!2sus" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
+
+<div class="gallery">
+
+  <h2 class="text-center text-white">Gallery</h2>
+
+    <div class="row"> 
+      <div class="column">
+        <img src="https://plus.unsplash.com/premium_photo-1682800179834-c05e7c7d0a09?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="https://images.unsplash.com/photo-1552566626-52f8b828add9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="https://plus.unsplash.com/premium_photo-1679090008554-788aa76a2e24?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="https://images.unsplash.com/photo-1592861956120-e524fc739696?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+      </div>
+      <div class="column">
+        <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="https://images.unsplash.com/photo-1587574293340-e0011c4e8ecf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="https://images.unsplash.com/photo-1522336572468-97b06e8ef143?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+      </div>  
+      <div class="column">
+        <img src="https://images.unsplash.com/photo-1587899897387-091ebd01a6b2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjh8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+      </div>  
+      <div class="column">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+        <img src="images/dish1.jpg" style="width:200px; height: 200px;">
+      </div>  
+    </div>
+
+  </div>
+
+
+
+
+
+
+
+
 
 
     </main>
