Added modal and modified footer

--- a/index.html
+++ b/index.html
@@ -184,41 +184,50 @@
       <div class="gallery-container">
         <h2 class="text-center text-black">Gallery</h2>
 
+        <div class="image-container">
         <div class="gallery">
           
-            <img
+            <img alt="Background Image" class="modal-trigger"
               src="https://plus.unsplash.com/premium_photo-1682800179834-c05e7c7d0a09?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
               style="width: 200px; height: 200px"
             />
-            <img
+            <img alt="Background Image" class="modal-trigger"
               src="https://images.unsplash.com/photo-1552566626-52f8b828add9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
               style="width: 200px; height: 200px"
             />
-            <img
+            <img alt="Background Image" class="modal-trigger"
               src="https://plus.unsplash.com/premium_photo-1679090008554-788aa76a2e24?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
               style="width: 200px; height: 200px"
             />
-            <img src="images/dish1.jpg" style="width: 200px; height: 200px" />
-            <img
+            <img src="images/dish1.jpg" alt="Background Image" class="modal-trigger" style="width: 200px; height: 200px" />
+            <img alt="Background Image" class="modal-trigger"
               src="https://images.unsplash.com/photo-1592861956120-e524fc739696?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVzdGF1cmFudHxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
               style="width: 200px; height: 200px"
             />
-            <img
+            <img alt="Background Image" class="modal-trigger"
               src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60"
               style="width: 200px; height: 200px"
             />
-            <img
+            <img alt="Background Image" class="modal-trigger"
               src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60"
               style="width: 200px; height: 200px"
             />
-            <img
+            <img alt="Background Image" class="modal-trigger"
               src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60"
               style="width: 200px; height: 200px"
             />
-            <img src="images/dish1.jpg" style="width: 200px; height: 200px" />
+            <img alt="Background Image" class="modal-trigger" src="images/dish1.jpg" style="width: 200px; height: 200px" />
+          </div>
           </div>
       </div>
     </section>
+
+
+    
+    <div id="modal" class="modal">
+      <span class="close">&times;</span>
+      <img src="" alt="Modal Image" id="modal-image">
+    </div>
 
     <div class="facebook">
       <a
