Modified styling for homepage and fixed scroll functionality

--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
       </ul>
       </div>
 
+      <!-- <a href="#target" class="scroll-link">Scroll to Target</a> -->
+
       
+    <!-- <h2 class="text-center welcome-message">Welcome to Ramen Boy 🍜</h2> -->
     <h2 class="text-center welcome-message">Welcome to Ramen Boy 🍜</h2>
 
 
@@ -187,6 +190,7 @@
         </div>
       </div>
       <img src="images/ramen3.png" class="ramen-png" alt="..." />
+  <!-- <div id="target">Target Element</div> -->
       
       <div class="map-container">
         <h2 id="location"class="text-center h2-location">Location</h2>
@@ -201,6 +205,8 @@
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div>
+
+
 
       <div id="gallery" class="gallery-container">
         <h2 class="text-center h2-gallery">Gallery</h2>
