--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <h1 class="text-center over-lay bg-white text-black opacity-75">
             Noodle & Teriyaki
           </h1>
-          <img src="images/newramen.jpg" class="d-block  w-100  c-image" alt="...">
-          <!-- <img src="images/dish1.jpg" class="d-block w-100 c-image" alt="..." /> -->
+          <!-- <img src="images/newramen.jpg" class="d-block  w-100  c-image" alt="..."> -->
+          <img src="images/dish1.jpg" class="d-block w-100 c-image" alt="..." />
           <div class="carousel-caption d-md-block">
             <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               "The food was delicious. Best tempura we've ever had! Service was
@@ -159,9 +159,9 @@
     <h2 class="text-center welcome-message">Welcome to Ramen Boy 🍜</h2>
 
 
-    <div class="section-one">
+    <!-- <div class="section-one">
       <h1 class="section-one-h1">Ramen... It's what we do best.<br /></h1>
-    </div>
+    </div> -->
     
     <section class="section-two">
       <div id="business-hours" class="business-hours-container">
@@ -290,7 +290,7 @@
       ></a>
     </div>
 
-    <!-- phone insta2 -->
+   
     <div class="instagram2 1">
       <a href="tel:+16615826161" target="_blank">
         <svg
