Added some fades

--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
           <h1 class="text-center over-lay bg-white text-black opacity-75">
             Noodle & Teriyaki
           </h1>
-          <!-- <img src="images/newramen.jpg" class="d-block  w-100  c-image" alt="..."> -->
-          <img src="images/dish1.jpg" class="d-block w-100 c-image" alt="..." />
+          <img src="images/newramen.jpg" class="d-block  w-100  c-image" alt="...">
+          <!-- <img src="images/menu.jpg" class="d-block  w-100  c-image" alt="..."> -->
+          <!-- <img id="carousel-one" src="images/dish1.jpg" class="d-block w-100 c-image" alt="..." /> -->
           <div class="carousel-caption d-md-block">
-            <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
+            <p class="name fade-in-element" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               "The food was delicious. Best tempura we've ever had! Service was
               very good. These folks have the flavor down. ★★★★★"
             </p>
-            <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
+            <h5 class="quote fade-in-element" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               T.D - Yelp Reviewer
             </h5>
           </div>
@@ -79,16 +80,16 @@
           </h1>
 
           <img
-            src="images/indoorortakeout.jpg"
+            src="images/inorout.jpg"
             class="d-block w-100 c-image"
             alt="..."
           />
           <div class="carousel-caption d-md-block">
-            <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
+            <h5 class="quote fade-in-element" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               Whether you're looking to enjoy a night out or stay in and
               relax...
             </h5>
-            <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
+            <p class="name fade-in-element" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               We've got what you need!
             </p>
           </div>
@@ -104,10 +105,10 @@
             alt="..."
           />
           <div class="carousel-caption d-md-block">
-            <h5 class="quote" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
+            <h5 class="quote fade-in-element" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               Currently processing applications!
             </h5>
-            <p class="name" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
+            <p class="name fade-in-element" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               See contact page for positions and how to apply
             </p>
           </div>
@@ -136,7 +137,7 @@
     <main>
 
       <div id="home-nav">
-        <ul>
+        <ul class="fade-in-element">
         <a href="#business-hours"><li class="">Business Hours</li></a>
         <span>|</span>
         <a class="scroll-link" href="#location"><li class="">Location</li></a>
@@ -156,7 +157,7 @@
 
       
     <!-- <h2 class="text-center welcome-message">Welcome to Ramen Boy 🍜</h2> -->
-    <h2 class="text-center welcome-message">Welcome to Ramen Boy 🍜</h2>
+    <h2 class="text-center welcome-message fade-in-element">Welcome to Ramen Boy 🍜</h2>
 
 
     <!-- <div class="section-one">
