Added old photo back

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <h1 class="text-center over-lay bg-white text-black opacity-75">
             Noodle & Teriyaki
           </h1>
-          <!-- <img src="images/newramen.jpg" class="d-block  w-100  c-image" alt="..."> -->
+          <img src="images/newramen.jpg" class="d-block  w-100  c-image" alt="...">
           <!-- <img src="images/menu.jpg" class="d-block  w-100  c-image" alt="..."> -->
-          <img id="carousel-one" src="images/dish1.jpg" class="d-block w-100 c-image" alt="..." />
+          <!-- <img id="carousel-one" src="images/dish1.jpg" class="d-block w-100 c-image" alt="..." /> -->
           <div class="carousel-caption d-md-block">
             <p class="name fade-in-element" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)">
               "The food was delicious. Best tempura we've ever had! Service was
