Trying other welcome message

--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
       
     <!-- <h2 class="text-center welcome-message">Welcome to Ramen Boy 🍜</h2> -->
     <!-- <h2 class="text-center welcome-message fade-in-element">Welcome to Ramen Boy 🍜</h2> -->
-    <h2 class="text-center fade-in-element h2-welcome">Welcome to Ramen Boy!</h2>
-    <!-- <h2 class="text-center fade-in-element welcome-message">Welcome!</h2> -->
+    <!-- <h2 class="text-center fade-in-element h2-welcome">Welcome to Ramen Boy!</h2> -->
+    <h2 class="text-center fade-in-element welcome-message">Welcome to Ramen Boy!🍜</h2>
 
 
-    <!-- <div class="section-one">
+    <div class="section-one">
       <h1 class="section-one-h1">Ramen... It's what we do best.<br /></h1>
-    </div> -->
+    </div>
     
     <section class="section-two">
       <div id="business-hours" class="business-hours-container">
