Added to contact

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </nav>
 
 
-    <h1 class="text-center">WHY DIDN'T YOU CALL ME??!!</h1>
+    <h1 class="text-center">Place Contact information on this page</h1>
     
 
    
